- Add Orders - Enabled automatic migrations in Entity Framework - Edit navbar in layout page

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=BakerAppContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BakerAppContext": "Server=localhost;Database=BakerAppContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
